[package]
name = "sherr"
version = "0.2.8"
authors = ["Artem Shein <artem.shein@aisys.ru>"]

description = "Error handling and logging helpers"
repository = "https://github.com/artemshein/sherr"
categories = ["development-tools"]
license = "MIT"

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"], optional = true }
chrono = { version = "0.4", optional = true }
failure = { version = "0.1", optional = true }
failure_derive = { version = "0.1", optional = true }
backtrace = "0.3"

[features]
default = []
impl = ["fern", "chrono"]
fail = ["failure", "failure_derive"]